--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "contentful-vue": "^1.0.5",
     "vue": "^2.5.17",
+    "vue-carousel": "^0.15.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -27,7 +29,9 @@
       "plugin:vue/essential",
       "@vue/prettier"
     ],
-    "rules": {},
+    "rules": {
+      
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
