--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 node_modules
 /dist
-/src/assets/content
+/public/content
 
 # local env files
 .env.local
@@ -20,4 +20,3 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
-*.mp4
