--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "contentful-vue": "^1.0.5",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17",
-    "vue-carousel": "^0.15.0",
-    "vue-plain-slider": "^1.1.0",
-    "vue-router": "^3.0.1"
+    "vue-carousel": "^0.16.0-rc1",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "vue-slick": "^1.1.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
-    "@vue/eslint-config-prettier": "^3.0.1",
+    "@vue/eslint-config-prettier": "^4.0.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
